--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     // Use local TensorFlow library
     // implementation 'org.tensorflow:tensorflow-lite-local:0.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 
     implementation "com.android.support:support-annotations:28.0.0"
     annotationProcessor "com.android.support:support-annotations:28.0.0"
