--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     // implementation 'org.tensorflow:tensorflow-lite-local:0.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    // https://mvnrepository.com/artifact/com.alibaba/fastjson
+    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
+    implementation 'com.android.support:recyclerview-v7:28.1.1'
 
     implementation "com.android.support:support-annotations:28.0.0"
     annotationProcessor "com.android.support:support-annotations:28.0.0"
