--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.AdminManageActivity"></activity>
-        <activity android:name=".activities.RegisterActivity"></activity>
-        <activity android:name=".activities.ClassifierActivity"></activity>
-        <activity android:name=".activities.ChooseModeActivity"></activity>
+        <activity android:name=".activities.ImageManageActivity"></activity>
+        <activity android:name=".activities.LabelManageActivity" />
+        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.ClassifierActivity" />
+        <activity android:name=".activities.ChooseModeActivity" />
         <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
