--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,20 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        config {
+            storeFile file('E:\\123456.jks')   //文件位置
+            storePassword '123456'  //指定密码
+            keyAlias '123456'  //指定别名
+            keyPassword '123456'  //指定别名密码
+            v2SigningEnabled true
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     aaptOptions {
